MDEV-20101 Assertion failure on select @@global.'m2'.replicate_ignore_table;

- Removing the wrong assert
- Re-enabling  multi_source.mdev-8874